--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/styled-components": "^5.1.24",
+    "i18next": "^21.6.14",
+    "i18next-xhr-backend": "^3.2.2",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "moment": "^2.29.1",
+    "lodash": "^4.17.21",
+    "primereact": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.7",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
