IN-24 : Works but ugly

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
+    "algoliasearch": "^4.13.0",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-xhr-backend": "^3.2.2",
@@ -24,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.1",
     "react-icons": "^4.3.1",
+    "react-instantsearch-dom": "^6.22.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
