--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-instantsearch-dom": "^6.22.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
