--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACK_PATH=http://localhost:8000/api
+REACT_APP_API_ENDPOINT=http://localhost:8000/api/
 REACT_APP_ALGOLIA_APP_ID=VIMLJ3RNKQ
 REACT_APP_ALGOLIA_API_KEY=3684aba4dee1e9bd12626e3dfae1c5e3
