--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-xhr-backend": "^3.2.2",
+    "leaflet": "^1.8.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "primeicons": "^5.0.0",
@@ -26,6 +27,9 @@
     "react-i18next": "^11.16.1",
     "react-icons": "^4.3.1",
     "react-instantsearch-dom": "^6.22.0",
+    "react-is": "^18.0.0",
+    "react-leaflet": "^4.0.0",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
@@ -55,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.9"
   }
 }
