--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -67,6 +68,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.0"
+    "@types/leaflet": "^1.7.0",
+    "cypress": "^9.5.4"
   }
 }
