[IN-34]: Fix responsive

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_ENDPOINT=http://localhost:8000/api
+REACT_APP_API_ENDPOINT=https://app-backend-test.in-visible.ovh/api
 REACT_APP_ALGOLIA_APP_ID=VIMLJ3RNKQ
 REACT_APP_ALGOLIA_API_KEY=3684aba4dee1e9bd12626e3dfae1c5e3
 REACT_APP_CAPTCHA_SITE_KEY=6Lda7TIfAAAAAEK5ruoUZzH3truL7hMA_zD8_p0O
